--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -15,8 +15,8 @@
 <body>
 
 <!--NAVBAR-->
-<div id="navbar">
-</div>
+<div id="navbar"></div>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8">
