--- a/HHManager/src/main/webapp/statistikk.html
+++ b/HHManager/src/main/webapp/statistikk.html
@@ -2,10 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="Javascript/nav.js"></script>
+
+    <title>Statistikk</title>
 </head>
 <body>
+
+<!--NAVBAR-->
+<div id="navbar"></div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="container">
+                    <h2>Statistikk</h2>
+                    <h2>Medlemmer</h2>
+            </div>
+        </div>
+        <div class="col-md-8 vl">
+            <div class="container-fluid">
+                    <h3>Hvem har lagt ut mest denne måneden?</h3>
+                    <h3>Samlede utgifter det siste året</h3>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
