Navbarnavigasjon og profilsideknapper + andre endringer

--- a/HHManager/src/main/webapp/lagbruker.html
+++ b/HHManager/src/main/webapp/lagbruker.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/lagbruker.css">
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <script src="Javascript/nav.js"></script>
+
 
     <title>Registrere bruker</title>
 
