--- a/HHManager/src/main/webapp/oppgjør.html
+++ b/HHManager/src/main/webapp/oppgjør.html
@@ -5,13 +5,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/forside.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../../resources/Bilder/favicon.ico" type="image/x-icon" />
     <script src="Javascript/nav.js"></script>
+
 </head>
 <body>
+
+<div id="navbar">
+</div>
+
+<div class = "row grid-divider">
+    <div class = "col-md-6">
+        <div class="størrelse">
+           <p> Balanse:</p>
+            <p>Ola Normann</p>
+            <p>Du er skyldt: </p>
+            <p>Du skylder</p>
+        </div>
+        <div class="nedenfor">
+
+        </div>
+    </div>
+
+    <div class = "col-md-2">
+
+    </div>
+
+    <div class = "col-md-4">
+
+    </div>
+</div>
 
 </body>
 </html>
