--- a/HHManager/src/main/webapp/endrepassord.html
+++ b/HHManager/src/main/webapp/endrepassord.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $("#myModal").modal('show');
-        });
+        });q
     </script>
 
 </head>
@@ -24,7 +24,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"> <span class="glyphicon glyphicon-home"></span> Endre passord</h4>
+                <h4 class="modal-title"> <span class="glyphicon glyphicon-lock"></span> Endre passord</h4>
             </div>
             <div class="modal-body">
                 <div class="husstand">
