--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -19,32 +19,34 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Husstander <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Husstand 1</a></li>
+                        <li><a href="#">Husstand 2</a></li>
+                        <li><a href="#">Husstand 3</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">Husstand 4</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li><a href="#lagnyhusstand">Lag ny husstand</a></li>
                     </ul>
-                <li><a href="#">Gjøremål</a></li>
-                <li><a href="#">Kalender</a></li>
-                <li><a href="#">Handlelister</a></li>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
+                </li>
+                <li><a href="gjøremål.html">Gjøremål</a></li>
+                <li><a href="kalender.html">Kalender</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Handlelister <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Liste 1</a></li>
+                        <li><a href="#">Liste 2</a></li>
+                        <li><a href="#">Liste 3</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Liste 4</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#handlelister.html">Lag ny handleliste</a></li>
+                    </ul>
                 </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
-                <li><a href="#">Ola Nordmann</a></li>
+                <li><a href="#profil.html">Ola Nordmann</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
