--- a/HHManager/src/main/webapp/statistikk.html
+++ b/HHManager/src/main/webapp/statistikk.html
@@ -18,16 +18,33 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 vl">
             <div class="container">
+                <div class="statistikkKolonne">
                     <h2>Statistikk</h2>
+                    <h4>Din Husholdning</h4>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Husholdning <span class="caret"></span></button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Husholdning 1</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Husholdning 2</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Husholdning 3</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="medlemmerKolonne">
                     <h2>Medlemmer</h2>
+                </div>
             </div>
         </div>
-        <div class="col-md-8 vl">
+        <div class="col-md-8">
             <div class="container-fluid">
+                <div class="lagtUtMest">
                     <h3>Hvem har lagt ut mest denne måneden?</h3>
+                </div>
+                <div class="samledeUtgifter">
                     <h3>Samlede utgifter det siste året</h3>
+                </div>
             </div>
         </div>
     </div>
