forside hent data to come

--- a/HHManager/src/main/webapp/lagbruker.html
+++ b/HHManager/src/main/webapp/lagbruker.html
@@ -48,7 +48,7 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <label><input type="checkbox" name="terms"> Jeg godtar <a href="#">Brukervilkårene</a>.</label>
+                    <label><input type="checkbox" name="terms"> Jeg godtar nb khbk <a href="#">Brukervilkårene</a>.</label>
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="button" id="registrerBtn">Registrer</button>
