--- a/HHManager/src/main/webapp/kalender.html
+++ b/HHManager/src/main/webapp/kalender.html
@@ -1,12 +1,29 @@
 <!-- IKKE FERDIG!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Hilsen charlotte-->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Kalender</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="CSS/kalender.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
+    <script src="Javascript/nav.js"></script>
+</head>
+
+<body>
+
+<div id="navbar"></div>
 <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
 <div class="sub-content-container">
-    <h2 class="sub-content-title">Full example</h2>
+    <h2 class="sub-content-title">Kalender</h2>
 
     <div class="sub-content">
         <div class="panel panel-default" style="margin:10px;">
-            <div class="panel-heading">Calendar</div>
+            <div class="panel-heading">Kalender 2017</div>
             <div class="panel-body">
                 <div id="calendar" class="calendar">
                     <div class="calendar-header panel panel-default">
@@ -1606,3 +1623,6 @@
         </div>
     </div>
 </div>
+
+</body>
+
