--- a/HHManager/src/main/webapp/profil.html
+++ b/HHManager/src/main/webapp/profil.html
@@ -35,19 +35,20 @@
         </div>
     </div>
 
-    <div class = "col-md-4">
+    <div class = "col-md-2">
         <h2>Dine husstander:</h2>
         <div class="husstander">
             <form action="">
                 <p><span class="glyphicon glyphicon-star"></span>Husstand 1 <input type="radio" name="favoritt" value="hus1"> Sett favoritt <br></p>
                 <p><span class="glyphicon glyphicon-heart"></span>Husstand 2 <input type="radio" name="favoritt" value="hus2"> Sett favoritt <br></p>
                 <p><span class="glyphicon glyphicon-remove"></span>Husstand 3 <input type="radio" name="favoritt" value="hus3"> Sett favoritt <br></p>
-                <p align="left">
+                <p align="right">
                     <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
                 </p>
             </form>
         </div>
     </div>
+    <div class = "col-md-2"></div>
 </div>
 
 </body>
