--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43"></a>
+            <a href="forside.html"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43"></a>
             <!--<a class="navbar-brand" href="#">Household Manager</a>-->
         </div>
 
@@ -25,7 +25,7 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Husstand 4</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#lagnyhusstand">Lag ny husstand</a></li>
+                        <li><a href="lagnyhusstand.html">Lag ny husstand</a></li>
                     </ul>
                 </li>
                 <li><a href="gjøremål.html">Gjøremål</a></li>
