--- a/HHManager/src/main/webapp/index.html
+++ b/HHManager/src/main/webapp/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="Javascript/logginn.js"></script>
+    <script src="Javascript/index.js"></script>
     <script src="Javascript/nav.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <!--
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/logginn.css">
+    <link rel="stylesheet" type="text/css" href="CSS/index.css">
 
     <title>Logg inn</title>
 </head>
