--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="forside.html"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43"></a>
+            <a href="#"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43" id="bildenav"></a>
             <!--<a class="navbar-brand" href="#">Household Manager</a>-->
         </div>
 
@@ -30,16 +30,7 @@
                 </li>
                 <li><a href="gjøremål.html">Gjøremål</a></li>
                 <li><a href="kalender.html">Kalender</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Handlelister <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Liste 1</a></li>
-                        <li><a href="#">Liste 2</a></li>
-                        <li><a href="#">Liste 3</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Liste 4</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#handlelister.html">Lag ny handleliste</a></li>
+                <li><a href="handlelister.html">Handlelister</a></li>
                     </ul>
                 </li>
             </ul>
