oppgjør side laget

--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
     <script src="Javascript/nav.js"></script>
 </head>
 
@@ -31,8 +31,11 @@
                         <img src="web-res/avatar.png" class="media-object" style="width:45px">
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h4 class="media-heading">John Doe
+                            <small><i>Posted on February 19, 2016</i></small>
+                        </h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
 
                         <!-- Nested media object -->
                         <div class="media">
@@ -40,8 +43,11 @@
                                 <img src="web-res/avatar.png" class="media-object" style="width:45px">
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h4 class="media-heading">John Doe
+                                    <small><i>Posted on February 19, 2016</i></small>
+                                </h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
 
                                 <!-- Nested media object -->
                                 <div class="media">
@@ -49,8 +55,11 @@
                                         <img src="web-res/avatar.png" class="media-object" style="width:45px">
                                     </div>
                                     <div class="media-body">
-                                        <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <h4 class="media-heading">John Doe
+                                            <small><i>Posted on February 19, 2016</i></small>
+                                        </h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua.</p>
                                     </div>
                                 </div>
 
