--- a/HHManager/src/main/webapp/handlelister.html
+++ b/HHManager/src/main/webapp/handlelister.html
@@ -11,15 +11,17 @@
     <script src="Javascript/nav.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/handlelister.css">
     <script src="Javascript/handleliste.js"></script>
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
+
 </head>
 <body>
 <div id="navbar"></div>
-<div id="utleggmodal" class= "modal fade">
+<div id="utleggmodal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"> <span class="glyphicon glyphicon-credit-card"></span> Lag utlegg</h4>
+                <h4 class="modal-title"><span class="glyphicon glyphicon-credit-card"></span> Lag utlegg</h4>
             </div>
             <div class="modal-body">
                 <div class="utlegg">
@@ -76,10 +78,12 @@
                                 <a href="#" class="list-group-item">Third item <input type="checkbox"
                                                                                       class="pull-right"></a>
                                 <a href="#" class="list-group-item">More item <input type="checkbox" class="pull-right"></a>
-                                <a href="#" class="list-group-item">Another <input type="checkbox" class="pull-right"></a>
+                                <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                   class="pull-right"></a>
                                 <form>
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Legg til ny gjenstand i listen">
+                                        <input type="text" class="form-control"
+                                               placeholder="Legg til ny gjenstand i listen">
                                         <div class="input-group-btn">
                                             <button class="btn btn-default" type="submit">
                                                 <i class="glyphicon glyphicon-plus"></i>
@@ -88,7 +92,9 @@
                                     </div>
                                 </form>
                                 <br>
-                                <button id="utlegg" type="button" class="btn btn-primary pull-left" data-toggle="modal" data-target="#utleggmodal">Lag utlegg</button>
+                                <button id="utlegg" type="button" class="btn btn-primary pull-left" data-toggle="modal"
+                                        data-target="#utleggmodal">Lag utlegg
+                                </button>
                                 <!-- Rounded switch -->
                                 <h5 id="offtekst" class="pull-right">Offentlig</h5>
                                 <label class="switch pull-right">
