--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -25,7 +25,7 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Husstand 4</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="lagnyhusstand.html">Lag ny husstand</a></li>
+                        <li ><a href="#" id ="nyHusstand" data-toggle="modal" data-target="#myModal">Lag ny husstand</a></li>
                     </ul>
                 </li>
                 <li><a href="gjøremål.html">Gjøremål</a></li>
