--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/forside.css">
+    <link rel="stylesheet" type="text/css" href="CSS/felles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
+
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <script src="Javascript/nav.js"></script>
 </head>
 
@@ -65,11 +66,9 @@
 
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
-
 
             <!--KOMMENTARFELT-->
             <div class="form-group container-kommentarfelt">
@@ -118,8 +117,9 @@
 
             </div>
         </div>
+
     </div>
 </div>
-
+<div id = "modaldiv"></div>
 </body>
 </html>
