--- a/HHManager/src/main/webapp/oppgjør.html
+++ b/HHManager/src/main/webapp/oppgjør.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
     <script src="Javascript/nav.js"></script>
+    <link rel="stylesheet" type="text/css" href="CSS/felles.css">
 </head>
 <body>
 <div id="navbar">
@@ -91,7 +92,6 @@
 
     </div>
 </div>
-
-
+<div id = "modaldiv"></div>
 </body>
 </html>
