--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43" id="bildenav"></a>
+            <a href="#" id="bildenav"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43" ></a>
             <!--<a class="navbar-brand" href="#">Household Manager</a>-->
         </div>
 
@@ -28,9 +28,9 @@
                         <li ><a href="#" id ="nyHusstand" data-toggle="modal" data-target="#myModal">Lag ny husstand</a></li>
                     </ul>
                 </li>
-                <li><a href="gjøremål.html">Gjøremål</a></li>
-                <li><a href="kalender.html">Kalender</a></li>
-                <li><a href="handlelister.html">Handlelister</a></li>
+                <li><a href="#" id = "gjøremålsknapp">Gjøremål</a></li>
+                <li><a href="#" id="kalenderknapp">Kalender</a></li>
+                <li><a href="#" id="handlelisteknapp">Handlelister</a></li>
                     </ul>
                 </li>
             </ul>
