gjorde overskriftene til utlegg bold

--- a/HHManager/src/main/webapp/handlelister.html
+++ b/HHManager/src/main/webapp/handlelister.html
@@ -21,11 +21,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="glyphicon glyphicon-credit-card"></span> Lag utlegg</h4>
+                <h3 class="modal-title"><span class="glyphicon glyphicon-credit-card"></span> Lag utlegg</h3>
             </div>
             <div class="modal-body">
                 <div class="utlegg">
-                    <p>Valgte elementer</p>
+                    <h4 id="overskrift1">Valgte elementer</h4>
                     <ul class="list-group">
                         <li class="list-group-item">Cras justo odio</li>
                         <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -35,7 +35,7 @@
                     </ul>
                 </div>
                 <div class="medlemmer">
-                    <p>Legg til medbetalere</p>
+                    <h4 id="overskrift2">Legg til medbetalere</h4>
                     <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
                                                                        class="all pull-right"></a>
                     <a href="#" class="list-group-item">Second item <input type="checkbox"
@@ -43,7 +43,6 @@
                     <a href="#" class="list-group-item">Third item <input type="checkbox" class="pull-right"></a>
                 </div>
             </div>
-
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
                 <button type="button" class="btn btn-primary">Send utlegg</button>
@@ -161,8 +160,6 @@
     </div>
     <div class="col-md-3"></div>
 </div>
-
 <div id = "modaldiv"></div>
-
 </body>
 </html>
