gjort mer på oppgjørside

--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/felles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon"/>
@@ -83,7 +84,7 @@
                             <h4 id="tekst" data-toggle="collapse" data-target="#collapseOne" role="button"
                                 aria-expanded="true"
                                 aria-controls="collapseOne">
-                                Medlemmer i husstand
+                                <span class="glyphicon glyphicon-user"></span> Medlemmer
                             </h4>
                         </div>
                         <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne"
