Opgjørside fra moneylapp i navbar

--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -36,7 +36,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
+                <li><a href="#" id="oppgjørknapp"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
                 <li><a href="#" id="olanormannknapp">Ola Normann</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
             </ul>
