Bedre tilpasset mobil visning, fortsatt ikke ferdig

--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -24,40 +24,42 @@
             <div class="container-fluid container-nyhetsoppdatering">
                 <h2>Nyhetsoppdatering</h2>
                 <br>
-                <div class="media">
-                    <div class="media-left">
-                        <img src="web-res/avatar.png" class="media-object" style="width:45px">
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">John Doe
-                            <small><i>Posted on February 19, 2016</i></small>
-                        </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                <div class="container media-riktig-plassering" style="height: 100%">
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="web-res/avatar.png" class="media-object" style="width:45px">
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">John Doe
+                                <small><i>Posted on February 19, 2016</i></small>
+                            </h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua.</p>
 
-                        <!-- Nested media object -->
-                        <div class="media">
-                            <div class="media-left">
-                                <img src="web-res/avatar.png" class="media-object" style="width:45px">
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">John Doe
-                                    <small><i>Posted on February 19, 2016</i></small>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
+                            <!-- Nested media object -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <img src="web-res/avatar.png" class="media-object" style="width:45px">
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">John Doe
+                                        <small><i>Posted on February 19, 2016</i></small>
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.</p>
 
-                                <!-- Nested media object -->
-                                <div class="media">
-                                    <div class="media-left">
-                                        <img src="web-res/avatar.png" class="media-object" style="width:45px">
-                                    </div>
-                                    <div class="media-body">
-                                        <h4 class="media-heading">John Doe
-                                            <small><i>Posted on February 19, 2016</i></small>
-                                        </h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <!-- Nested media object -->
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="web-res/avatar.png" class="media-object" style="width:45px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h4 class="media-heading">John Doe
+                                                <small><i>Posted on February 19, 2016</i></small>
+                                            </h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                                tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -70,6 +72,7 @@
             <div class="form-group container-kommentarfelt">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
+                <br>
                 <p align="right">
                     <button type="button" class="btn">Send</button>
                 </p>
