Endret gjøremål til gjoremaal og oppgjør til oppgjor sitewide

--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="container-checkbox">
-                <h2>Mine gjøremål</h2>
+                <h2>Mine gjoremaal</h2>
                 <br>
                 <div class="checkbox">
                     <label><input type="checkbox" value="">Option 1</label>
